// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles/> renders <Profiles/> with populated data 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 brFiEp"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 fjLfcR"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 etMhNa"
  >
    <li
      class="profiles__User-sc-bxtkkv-5 cnFNU"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 jJKsjl"
        data-testid="profile-picture"
        src="/images/users//images/ben.jpg.png"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 ecPTxa"
      >
        Ben Sahagun
      </p>
    </li>
  </ul>
   
</div>
`;

exports[`<Profiles/> renders <Profiles/> with populated data but no picture given 1`] = `
<div
  class="profiles__Container-sc-bxtkkv-0 brFiEp"
>
  <h1
    class="profiles__Title-sc-bxtkkv-1 fjLfcR"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-bxtkkv-2 etMhNa"
  >
    <li
      class="profiles__User-sc-bxtkkv-5 cnFNU"
    >
      <img
        class="profiles__Picture-sc-bxtkkv-4 jJKsjl"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-bxtkkv-3 ecPTxa"
      >
        Ben Sahagun
      </p>
    </li>
  </ul>
   
</div>
`;
